# ros

./: .gitignore  Cargo.toml  README  README.md  build.rs  codecheck  init.c  libros.c  libros.h
.githooks/: pre-commit
kernel/: Cargo.toml  build.rs
kernel/src/: allocator.rs  elf.rs  gdt.rs  init.rs  initramfs.rs  interrupts.rs  main.rs  memory.rs  test.rs  teste2.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  init.rs  interrupts.rs  memory.rs  mod.rs  syscall.rs  user.rs
kernel/src/drivers/: keyboard.rs  mod.rs  serial.rs
kernel/src/drivers/disk/: ata.rs  fat32.rs  mod.rs
kernel/src/drivers/video/: framebuffer.rs  mod.rs
kernel/src/mm/: allocator.rs  mod.rs
kernel/src/mm/allocator/: fixed_size_block.rs
kernel/src/sched/: mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/: main.rs
test-runner/: Cargo.toml
test-runner/src/: main.rs
tools/codecheck/: Cargo.toml
tools/codecheck/src/: main.rs
