[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
noto-sans-mono-bitmap = "0.3"
conquer-once = { version = "0.4", default-features = false }
spinning_top = "0.3"
x86_64 = "0.15"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"